--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore compiled c python
 *.pyc
 
+# Ignore raw Jupyter notebooks
+*.ipynb
+
 # Ignore test caches
 .cache/v/cache/lastfailed
 .ipynb_checkpoints/
