--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,12 @@
-name: parallel-python3
+name: qubitsim
 dependencies:
-- python=3
+- python=3.9
+- pip
+- black
+- jupyter
+- matplotlib
 - mpi4py
 - numpy
+- pytest
 - scipy
-- matplotlib
-- anaconda
+- wheel
