--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ long_description = file: README.md
 zip_safe = False
 packages = find:
 install_requires = 
-    numpy
+    numpy>=1.22
     scipy
 
 [options.extras_require]
